salesforce-main/src/main/default/objects/Bank_Statement_Line__c/Bank_Statement_Line__c.object-meta.xml
<CustomObject>
    <description>The lines of the Bank Statement (associated with the Bank Statement object)</description>
    <label>Bank Statement Line</label>
    <nameField>
        <displayFormat>BSL-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>