salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/Bank_Statement__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Statement</label>
    <referenceTo>Bank_Statement__c</referenceTo>
    <relationshipLabel>Bank Statement Lines</relationshipLabel>
    <relationshipName>Bank_Statement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>