salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/BPP_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Value_Date__c</fullName>
    <label>Value Date</label>
    <type>DateTime</type>
</CustomField>