salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <label>Error Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>