salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Referenced Invoices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>