salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/Matched_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Matched_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Bank Statement Lines</relationshipLabel>
    <relationshipName>Bank_Statement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>