salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>blng__Payment__c</referenceTo>
    <relationshipLabel>Bank Statement Lines</relationshipLabel>
    <relationshipName>Bank_Statement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>