salesforce-main/src/main/default/objects/Bank_Statement_Line__c/fields/Payment_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Code__c</fullName>
    <label>Payment Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>